--- a/css/style.css
+++ b/css/style.css
@@ -2,24 +2,26 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family: 'Raleway', sans-serif;
 }
 .header{
     background-color: black;
     width:100%;
     color:white;
-    height: 60px;
+    
 }
 .container{
-    height: 100%;
     width:80%;
-    margin:0 auto;
-    
+    margin:0 auto;  
 }
 .header__logo span{
     color: #27c7ab;
  
 }
 .header .container{
+    font-size: 16px;
+    padding-top: 18px;
+    padding-bottom: 18px;
     display:flex;
     justify-content: space-between;
     align-items: center;
@@ -30,14 +32,14 @@
     display: flex;
 }
 li{
-    margin-right: 15px;
+    margin-right: 25px;
 }
 li:last-child{
     margin-right: 0;
 }
 .slider-section{
     width:100%;
-    height: 350px;
+    
     background: rgba(255,255,255,1);
 background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 28%, rgba(246,246,246,1) 77%, rgba(237,237,237,1) 100%);
 background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(28%, rgba(255,255,255,1)), color-stop(77%, rgba(246,246,246,1)), color-stop(100%, rgba(237,237,237,1)));
@@ -50,37 +52,100 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 .slider-section__global{
      display:flex;
      align-items: center;
+     justify-content: space-between;
+    
  }
+ .slider-section__global--arrow{
+    font-size:45px;
+    color:#27c7ab;
+    width: 5%;
+ }
+ .slider-section__global--blackchair{
+     width:100%;
+    height: auto;    
+ }
+
+ .sldier-section__txt{
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     margin-right: 40px;
+     padding: 10px;
+ }
+ .sldier-section__txt p{
+     padding: 10px;
+     font-size: 14px;
+     line-height: 25px;
+ }
+ .sldier-section__txt h1{
+     text-transform: uppercase;
+     text-align: center;
+     margin-bottom: 10px;
+ }
+.sldier-section__txt span{
+    color:#27c7ab;
+}
+span.sldier-section__btn{
+    color:white;
+    background-color: #27c7ab;
+    font-size: 18px;
+    padding: 12px;
+    border-radius: 13px 13px 13px 13px;
+}
  .images-section .container{
-     height: 300px;
-     widows: 100%;
+     width:  80%;
+ }
+ .images-section{
+     padding-top: 20px;
  }
  .images-section__mainbox{
      display: flex;
-     justify-content: space-evenly;
-     align-items: center;
+     justify-content: space-between;
+     align-items: flex-start;
+     padding:12px;
+     margin-bottom: 50px;
+     
  }
  .image-section__box--first{
-    width:30%;
+    width:31%;
     background-image: url(../images/box1_img.jpg);
-    width:30%; 
-    height: 74%;
+    height:225px;
     background-size: cover;
     background-repeat: no-repeat;
-    
  }
  .image-section__box--second{
     background-image: url(../images/box2_img.jpg);
-    width:30%; 
-    height: 74%;
+    width:31%; 
+    height:225px;
     background-size: cover;
-    background-repeat: no-repeat;
-    
+    background-repeat: no-repeat; 
  }
  .image-section__box--third{
-    width:30%;
-    height: 74%;
-    border:1px solid rgb(182, 182, 182);
+    width:31%;
+    border:1px solid rgba(212, 212, 212, 0.788);
+ }
+  .image-section__box--third p{
+      padding:12px;
+  }
+ .image-section__box--third h3{
+     margin:12px;
+     border-bottom:5px solid #27c7ab;
+     width:40%;
+ }
+ .chair-name{
+     display:flex;
+     align-items: flex-end;
+     margin-bottom: 20px;
+ }
+ .img__background {
+    background-color: rgba(255, 250, 250, .7);
+    width:100%;
+ }
+ .img__background h3{
+     padding: 20px;
+ }
+ .image-section__box--third p:first-of-type{
+     margin-bottom: 12px;
  }
  .section-price{
   
@@ -90,25 +155,128 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
  }
  .section-price__mainbox{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    align-items: center;
+    padding:12px;
+}
+ .section-price__basic-plan{
+    width:31%;
+   
+    border:1px solid rgb(182, 182, 182);
+    display: flex;
+    flex-direction: column;
     align-items: center;
  }
- .section-price__basic-plan{
-    width:30%;
-    height: 74%;
-    border:1px solid rgb(182, 182, 182);
+ .section-price__basic-plan p:nth-child(3){
+     background-color: #e4e4e4;
+     font-size: 18px;
+     text-align: center;
+     padding:15px 30px;
+     width:100%;
+     color:#868686;
+     
  }
+ .section-price__basic-plan p:nth-child(4){
+     background-color: rgb(235, 235, 235);
+     font-size: 18px;
+     text-align: center;
+     padding:15px 30px;
+     width:100%;
+     color:rgb(131, 131, 131);
+     
+ }
+ .section-price__basic-plan--circleprice{
+     width: 100px;
+     height: 100px;
+     border-radius: 50%;
+     background-color: #fff;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     font-weight: bold;
+     color:#c2c2c2;
+     margin-bottom: 20px;
+ }
+ 
+ .section-price__basic-plan--circleprice p:first-child{
+     font-size: 33px;
+ }
+ .section-price__basic-plan--circleprice p sup{
+     font-size: 16px;
+ }
+ div.section-price__basic-plan>p:first-of-type{
+     color:#27c7ab;
+     padding:20px 30px;
+     font-weight: bold;
+     text-transform: uppercase;
+      font-size:18px;
+ }
+ .section-price__basic-plan--btn-box{
+     width:100%;
+     background-color: #fff;
+     padding-top: 100px;
+     padding-bottom: 17px;
+     display: flex;
+     justify-content: center;
+     align-items: flex-end;
+ }
+ .section-price__basic-plan--btn-box span{
+    padding:6px 30px;
+    background-color: #27c7ab;
+    border-radius: 10px 10px 10px 10px;
+    
+ }
+ 
+
  .section-price__standard-plan{
-    width:30%;
-    height: 74%;
+    width:31%;
+    height: 350px;
     border:1px solid rgb(182, 182, 182);
  }
  .section-price__advance-plan{
-    width:30%;
-    height: 74%;
+    width:31%;
+    height: 350px;
     border:1px solid rgb(182, 182, 182);
  }
  .form-section{
-    width:100;
-    height: 500px;
+    width:100%;
+    color:black;
+    
+ }
+ .form-section__form{
+     width:60%;
+     
+ }
+ .form-section__form--form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    margin:10px 0;
+ }
+ input{
+     margin:10px 0;
+ }
+ label{
+     width:80%;
+    }
+ .form__mainbox{
+     display: flex;
+     justify-content: space-between;
+ }
+ .form-section__sendBox{
+     display:flex;
+     flex-direction: column;
+     align-items:center;
+     justify-content: center;
+     margin-left: 10px;
+ }
+ .form-section__sendBox--btn{
+     background-color: #27c7ab;
+     color:white;
+     padding: 10px;
+     border-radius: 15%;
+     width:80%;
+     text-align: center;
  }
