--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
     padding:0;
     box-sizing: border-box;
     font-family: 'Raleway', sans-serif;
+    
+}
+a{
+    text-decoration: none;
+    color:white;
 }
 .header{
     background-color: black;
@@ -26,7 +31,7 @@
     align-items: center;
     text-transform: uppercase;
 }
-.header__nav ul{
+.header__nav >ul{
     list-style-type: none;
     display: flex;
     padding-right: 10px;
@@ -35,10 +40,54 @@ li{
     margin-left: 4px;
     margin-right: 50px;
 }
+
 li:last-child{
     margin-right: 3px;
     margin-left: -10px;
 }
+li.dropdown > ul {
+    width:160px;
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+     position: absolute;
+    padding-left: 20px;
+    margin-left: -40px;
+    top:52px;
+    transition: 0.2s;
+    list-style: none;
+    background-color: black;
+    z-index: 1;
+    visibility: hidden;
+}
+li.dropdown:hover > ul {
+   
+    visibility: visible;
+    
+}
+
+li.dropdown > ul>div{
+    
+    z-index: 1;
+    position: relative;
+    width:10px;
+    height: 10px;
+    background-color: black;
+    left:55px;
+    top:-5px;
+    transform:rotate(45deg)
+}
+li.dropdown>ul>li{
+    line-height: 24px;
+   
+    
+}
+li.dropdown > ul>li:last-child{
+     margin-right: 0px;
+    margin-left: 0px;
+    padding-left: 4px;
+}
+
 .slider-section{
     width:100%;
     
@@ -164,13 +213,14 @@ span.sldier-section__btn{
     display: flex;
     justify-content: space-between;
     padding:20px 0;
-    min-height: 80%;
+    min-height: 50%;
 }
  .section-price__basic-plan,
  .section-price__standard-plan,
  .section-price__advance-plan{
     width:31%;
-    height: 86%;
+    max-height: 63%;
+    height:580px;
     min-height:600px;
     border:1px solid rgb(182, 182, 182);
     display: flex;
