dodano slider + zanikanie bloków na zdj

--- a/scss/partials/_slider-section.scss
+++ b/scss/partials/_slider-section.scss
@@ -22,6 +22,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
     font-size:45px;
     color:$main-color;
     width: 5%;
+    cursor: pointer;
  }
  .slider-section__global--blackchair{
     height: auto; 
