--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 @import 'partials/section-price';
 @import 'partials/form-section';
 @import 'partials/footer';
+@import 'partials/calcSection';
 
 
 
