--- a/scss/partials/_calcSection.scss
+++ b/scss/partials/_calcSection.scss
@@ -6,6 +6,8 @@
 .application h3 {
   color: #575757;
   font-size: 18px;
+  border-bottom: 5px solid $main-color;
+  
 }
 
 .application header.align_right{
@@ -106,20 +108,16 @@
 }
 
 
-.application .green_bell {
-  background-color: #24baa0;
-  width: 200px;
-  height: 6px;
-  display: inline-block;
-  margin: 5px 0 5px 0;
-}
+
+ 
 
 .summary_panel {
     display:flex;
     flex-wrap:wrap;
   background-color: white;
   width:100%;
-  height:250px;
+  min-width: 250px;
+  height:265px;
   padding:10px;
   margin-top: 50px;
 
@@ -142,20 +140,20 @@
 }
 .panel_left {
   display: block;
-  width: 50%;
+  width: 70%;
   padding-bottom:10px;
   border-bottom:1px solid #e7e7e7;
-  height: 170px;
+  height: 185px;
 }
 
 .panel_right {
   display: block;
-  width: 50%;
+  width: 30%;
   border-left:1px solid #e7e7e7;
   text-align: right;
   padding-bottom:10px;
   border-bottom:1px solid #e7e7e7;
-  height: 170px;
+  height: 185px;
 }
 
 .panel_left h4 , .panel_right h4{
@@ -186,7 +184,7 @@
 
 .sum {
   display: block;
-  width: 100px;
+  width: 50%;
   text-align: right;
   margin-top: 10px;
   font-size: 22px;
